# ogniskowy-grajek

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG_AGENT.md  Dockerfile  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  Makefile  README.md  SPECIFICATION.md  THIRD_PARTY_NOTICES.md  compose.gpu.yml  compose.yml  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
ops/: RUNTIME_HELPER.md  ogniskowy-grajek.service
src/ogniskowy_grajek/: audio.py  config.py  ingest.py  jobs.py  llm.py  lyrics.py  models.py  music.py  pipeline.py  transcribe_cli.py  worker.py
tests/: test_app.py  test_audio.py  test_ingest.py  test_jobs.py  test_llm.py  test_lyrics.py  test_models.py  test_music.py  test_pipeline.py  test_worker.py
