[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ogniskowy-grajek"
version = "0.1.0"
description = "Upraszcza utwory YouTube do ogniskowych chwytów gitarowych i schematu bicia."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "httpx==0.28.1",
  "numpy==2.1.3",
  "pydantic==2.12.5",
]

[project.optional-dependencies]
web = [
  "streamlit==1.59.1",
]
worker = [
  "demucs==4.0.1",
  "google-genai==2.11.0",
  "librosa==0.11.0",
  "soundfile==0.13.1",
  "torch==2.5.1",
  "torchaudio==2.5.1",
  "yt-dlp==2026.7.4",
  "yt-dlp-ejs==0.8.0",
]
dev = [
  "pytest==8.4.2",
  "pytest-cov==7.0.0",
  "ruff==0.14.14",
]

[project.scripts]
ogniskowy-worker = "ogniskowy_grajek.worker:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "integration: tests that require native audio tools",
  "gpu: tests that require a working NVIDIA GPU",
  "network: tests that access external services",
]

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
